add changes in styles

--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "opt": "expo optimize"
   },
   "dependencies": {
+    "axios": "latest",
     "expo": "^33.0.0",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
-    "react-native-web": "^0.11.4",
     "react-native-router-flux": "latest",
-    "axios": "latest"
+    "react-native-vector-icons": "^6.5.0",
+    "react-native-web": "^0.11.4"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.1.1"
